# retry-block

./: Cargo.toml  LICENSE.md  README.md
src/: future.rs  lib.rs  macro.rs
src/delay/: mod.rs  random.rs
src/persist/: mod.rs  test.rs
